--- a/index.html
+++ b/index.html
@@ -3,25 +3,40 @@
 <head>
 <meta charset="utf-8">
 <title>个人主页</title>
+<style type="text/css">
+body,td,th {
+    font-family: "华文仿宋";
+}
+body {
+    margin-left: 30%;
+    margin-right: 30%;
+}
+</style>
 </head>
 
 <body>
-<p>个人简介[2002060017 刘俊逸]</p>
-<p>姓名: 刘俊逸<img src="图片.png" alt="" width="173" height="254" align="right"/></p>
+<div style="font-family: '华文仿宋'; font-size: 36px; color: #6cf; text-align: center;">个人简介[2002060017 刘俊逸] </div>
+<p style="font-weight: bolder; color: #1BD47B;">个人介绍</p>
+<p style="font-style: normal; font-weight: normal;">姓名</p>
+<p> 刘俊逸</p>
 <p>性别:男</p>
 <p>出生年月:2002/11/07</p>
 <p>籍贯:汉</p>
 <p>专业:供应链管理</p>
 <p>政治面貌:团员</p>
 <p>电子邮件:1170658159@qq.com</p>
-<p>技能总结：能进行基础的英语交流，可熟练使用excel，PowerPoint及word，同时能够流畅使用pr与ps</p>
-<p>兴趣爱好：羽毛球，PC</p>
-<p> 教育背景：中学毕业、大学学习中</p>
-<p>主修课程：管理学，供应链管理，物流管理</p>
+<p style="font-weight: bolder; color: #FF9E00;">技能总结</p>
+<p>能进行基础的英语交流，可熟练使用excel，PowerPoint及word，同时能够流畅使用pr</p>
+<p style="font-weight: bolder; color: #FF9E00;">兴趣爱好</p>
+<p>羽毛球，PC的应用，简单的视频创作</p>
+<p style="color: #FF9E00; font-weight: bolder;"> 教育背景</p>
+<p>中学毕业、大学学习中</p>
+<p style="font-weight: bolder; color: #FF9E00;">主修课程</p>
+<p>管理学，供应链管理，物流管理</p>
 <p>获奖情况：无</p>
-<p>自我评价</p>
-<p>个性很随和，能在与人沟通的同时让人建立可靠的信任感。在与同事的沟通中，能不拘小节，很好的处理各类人际关系。与上级工作方面的沟通中，可以换位思考，理解对方工作要求的具体想法及面临的困难。</p>
-<p>也许工作和生活中，会有固执的时候，但事后只要自己错了，都会勇于向对方承认错误并寻求改正的方法。</p>
+<p style="font-weight: bolder; color: #FF9E00;">自我评价</p>
+<p>个性很随和，能在与人沟通的同时让人建立可靠的信任感。在与同学的沟通中，能不拘小节，很好的处理各类人际关系。</p>
+<p>也许学习和生活中，会有固执的时候，但事后只要自己错了，都会勇于向对方承认错误并寻求改正的方法。</p>
 <p>善于沟通、挑战高难度事情、做事认真仔细，吃苦耐劳，有很强的团队协作意认，能够迅速地融入新的环境中。自学能力强，易接受新事物。</p>
 <p>希望能在大学期间完成学业并能学会基础及进阶的视频制作能力，</p>
 </body>
